--- a/quadcopter-simulation.cabal
+++ b/quadcopter-simulation.cabal
@@ -19,6 +19,7 @@ executable           quadcopter-simulation
                      spatial-math >= 0.2.0,
                      linear >= 1.3.1,
                      async,
+                     bytestring,
                      clock,
                      GLUT,
                      containers,
