--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,7 @@
 resolver: lts-9.1
+packages:
+  - .
+  - /home/niklas/src/haskell/not-gloss/not-gloss
 extra-deps:
   - spatial-math-0.2.7.0
-  - not-gloss-0.7.7.0
   - serialport-0.4.7
